--- a/css/style.css
+++ b/css/style.css
@@ -335,7 +335,7 @@ TESTIMONIAL
 ***********************************/
 #testimonial
 {
-    background: url('../img/bg.jpg') no-repeat;
+    background: url('../img/alexa3.jpg') no-repeat;
     background-size: cover;
     min-height: 390px;
 }
