--- a/css/style.css
+++ b/css/style.css
@@ -302,7 +302,7 @@ features
     width:100%;
     height:100%;
     padding: 30px 10px;
-    background-color:#F4F3F3;
+    background-color:white;
     backface-visibility:hidden;
     -webkit-transform:rotateY(-180deg);
     -moz-transform:rotateY(-180deg);
