era la etiqueta jaja

--- a/css/style.css
+++ b/css/style.css
@@ -330,7 +330,7 @@ features
 TESTIMONIAL
 ************************************
 ***********************************/
-#testimonial
+#ayuda
 {
     background: url('../img/alexa.jpg') no-repeat;
     background-size: cover;
