--- a/css/style.css
+++ b/css/style.css
@@ -325,6 +325,9 @@ features
     -moz-transform:rotateY(0);
     transform:rotateY(0)
 }
+.contenedor{
+    margin: 0 auto;
+}
 /***********************************
 ************************************
 TESTIMONIAL
