--- a/css/style.css
+++ b/css/style.css
@@ -327,6 +327,7 @@ features
 }
 .contenedor{
     margin: 0 auto;
+    background-color: red;
 }
 /***********************************
 ************************************
