--- a/css/style.css
+++ b/css/style.css
@@ -325,7 +325,10 @@ features
     -moz-transform:rotateY(0);
     transform:rotateY(0)
 }
-
+.contenedor{
+margin: 0 auto;
+background-color: red;
+}
 /***********************************
 ************************************
 TESTIMONIAL
