--- a/css/style.css
+++ b/css/style.css
@@ -327,8 +327,10 @@ features
 }
 .contenedor{
 margin: 0 auto;
-background-color: red;
 width: 100%;
+}
+.contenedor h1{
+    font-size: 20px;
 }
 /***********************************
 ************************************
