--- a/css/style.css
+++ b/css/style.css
@@ -329,15 +329,13 @@ features
 margin: 0 auto;
 width: 100%;
 background-color: white;
+padding-top: 15px;
 }
 .contenedor h1{
     font-size: 25px;
+    font-family: Arial, Helvetica, sans-serif;
 }
-/***********************************
-************************************
-TESTIMONIAL
-************************************
-***********************************/
+
 #ayuda
 {
     background: url('../img/alexa.jpg') no-repeat;
