--- a/css/style.css
+++ b/css/style.css
@@ -247,7 +247,7 @@ features
 }
 
 #parallax1{	
-	background-image: url(../img/parallax/1.jpg);
+	background-image: url(../img/parallax.jpg);
     background-position: center;
     background-repeat: no-repeat;
     display:block;
