--- a/css/style.css
+++ b/css/style.css
@@ -250,7 +250,7 @@ features
 Parallax
 ************************************
 ***********************************/
-#parallaxXD{	
+.parallax1{	
 	background-image: url(../img/1.jpg);
     background-size: auto;
     background-position: center;
@@ -260,7 +260,7 @@ Parallax
     z-index:120; 
 }
 
-#parallaxXD:after {	
+.parallax1:after {	
 	background-image: url(data:image/jpeg;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAEklEQVQImWNgYGD4z0AswK4SAFXuAf8EPy+xAAAAAElFTkSuQmCC);
 	content: "";
 	position: absolute;
@@ -270,13 +270,6 @@ Parallax
 	top: 0;
 	opacity: 0.9;
 	z-index: -1;
-}
-.home-section {
-    padding-top: 150px;
-    padding-bottom: 110px;
-	display:block;
-    position:relative;
-    z-index:120;
 }
 .text-light {
 	color: #fff;
