--- a/css/style.css
+++ b/css/style.css
@@ -251,7 +251,7 @@ Parallax
 ************************************
 ***********************************/
 .parallax1{	
-	background-image: url(../img/1.jpg);
+	background-image: url(../img/parallax.jpg);
     background-size: auto;
     background-position: center;
     background-repeat: no-repeat;
