--- a/css/style.css
+++ b/css/style.css
@@ -575,7 +575,7 @@ contact
 #footer
 {
     padding: 20px 0px;
-    background-color: brown;
+    background-color: #807878;
 }
 .scrollToTop {
     position: fixed;
