--- a/css/style.css
+++ b/css/style.css
@@ -567,11 +567,7 @@ contact
 {
     color: #be9e21;
 }
-/***********************************
-************************************
-contact
-************************************
-***********************************/
+/***********************************/
 #footer
 {
     padding: 20px 0px;
@@ -594,7 +590,7 @@ contact
 }
 .white-bg
 {
-    background-color: #fff;
+    background-color: rgb(168, 162, 162);
 }
 #footer a{
     color: #be9e21;
