--- a/css/style.css
+++ b/css/style.css
@@ -181,7 +181,7 @@ features
 {
     font-family: 'Fira Sans', sans-serif;
     font-size: 50px;
-    text-transform: uppercase;
+    text-transform: upperc-lase;
     color:#4e4c4c
 }
 .sub-title
