--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
 	line-height: 1.4;
 	font-family: 'Roboto', sans-serif;
-    color: #67696c;
+    background-color: #EAE5E5;
     font-size: 16px;
     font-weight: 300;
     letter-spacing: 0.5px;
