--- a/css/style.css
+++ b/css/style.css
@@ -259,6 +259,7 @@ Parallax
 .parallax1{	
 	background-image: url(../img/banner.jpg);
     background-position: center;
+    background-size: cover;
     background-repeat: no-repeat;
     display:block;
     position:relative;
